# macabot

./: Cargo.toml
src/: main.rs  phrases.rs  util.rs
