[package]
name = "macabot"
version = "0.1.0"
authors = ["Vinícius R. Miguel <vinicius.miguel@unifesp.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
futures = "0.3"
rand = "0.8.3"
chrono = "0.4"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }